edited a cors config and web security